IntroGrpc.Proxy/proxy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains:
                        - "grpc.local"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: netcore_grpc_service
                            max_grpc_timeout: 0s
                      cors:
                        # allow_credentials: true
                        allow_origin_string_match:
                          # - prefix: "grpc.local"
                          - prefix: "*"
                        allow_methods: POST, OPTIONS
                        allow_headers: keep-alive, user-agent, cache-control, content-type, content-transfer-encoding, x-accept-content-transfer-encoding, x-accept-response-streaming, x-user-agent, x-grpc-web, grpc-timeout
                        expose_headers: grpc-status, grpc-message, grpc-encoding, grpc-accept-encoding
                http_filters:
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.api.v2.auth.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  certificate_chain:
                    { "filename": "/etc/ssl/certs/grpc.local.crt" }
                  private_key: { "filename": "/etc/ssl/private/grpc.local.key" }
                validation_context:
                  trusted_ca:
                    filename: /etc/ssl/certs/grpc.local.crt
                alpn_protocols: "h2,http/1.1"
  clusters:
    - name: netcore_grpc_service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: netcore_grpc_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "grpc.local"
                      port_value: 8080
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
